<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tab_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/upside_btn_bg"
        android:gravity="center"
        android:text="@string/fav_tab_1" />

    <TextView
        android:id="@+id/tab_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/upside_btn_bg"
        android:gravity="center"
        android:text="@string/fav_tab_2" />

    <TextView
        android:id="@+id/tab_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/upside_btn_bg"
        android:gravity="center"
        android:text="@string/fav_tab_3" />

</LinearLayout>