<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:text="@string/contact_title"/>
    
    <EditText 
        android:id="@+id/c_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:text="@string/contact_msg"/>
    
    <EditText 
        android:id="@+id/c_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|top"
        android:inputType="textMultiLine"/>
    
    <TextView 
        android:id="@+id/c_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/search_bar_bg"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/contact_submit"/>
    
    
</LinearLayout>
