<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/menu_btn_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/title_bar_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.mcproject.net.customview.RecyclingImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/menu1_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/menu_1_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_btn_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/title_bar_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.mcproject.net.customview.RecyclingImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/menu2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/menu_2_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_btn_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/title_bar_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.mcproject.net.customview.RecyclingImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/menu3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/menu_3_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_btn_4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/title_bar_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.mcproject.net.customview.RecyclingImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/menu4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/menu_4_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>