<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sort_btn_layer"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="horizontal" 
    android:background="@color/black"
    android:visibility="gone">

    <!-- 조회수순 -->

    <LinearLayout
        android:id="@+id/sort_viewcount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sort_btn_viewcount" />

        <com.mcproject.net.customview.RecyclingImageView
            android:id="@+id/sort_viewcount_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="7dp"
            android:src="@drawable/arrow_up_off" />
    </LinearLayout>

    <!-- 등록일순 -->

    <LinearLayout
        android:id="@+id/sort_datetime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sort_btn_datetime" />

        <com.mcproject.net.customview.RecyclingImageView
            android:id="@+id/sort_datetime_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="7dp"
            android:src="@drawable/arrow_up_off" />
    </LinearLayout>

    <!-- 추천순 -->

    <LinearLayout
        android:id="@+id/sort_recomm"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sort_btn_recommend" />

        <com.mcproject.net.customview.RecyclingImageView
            android:id="@+id/sort_recomm_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="7dp"
            android:src="@drawable/arrow_up_off" />
    </LinearLayout>

</LinearLayout>